<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.elziniel.projet.Accueil">

    <TextView
        android:text="@string/ac_texte"
        android:textSize="32sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/accueil"
        android:textAlignment="center" />

    <Space
        android:layout_width="fill_parent"
        android:layout_height="32sp"
        android:layout_below="@+id/accueil"
        android:id="@+id/espace" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ac_parcourir"
        android:id="@+id/parcourir"
        android:layout_below="@+id/espace"
        android:layout_centerHorizontal="true"
        android:onClick="parcourir" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ac_rechercher"
        android:id="@+id/rechercher"
        android:layout_below="@+id/parcourir"
        android:layout_centerHorizontal="true"
        android:onClick="rechercher" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ac_ajouter"
        android:id="@+id/ajouter"
        android:layout_below="@+id/rechercher"
        android:layout_centerHorizontal="true"
        android:onClick="ajouter" />
</RelativeLayout>
