<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.elziniel.projet.Fiche">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/nom"
        android:layout_alignParentEnd="false"
        android:textSize="48sp"
        android:layout_centerHorizontal="true" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/note"
        android:layout_below="@+id/nom"
        android:layout_centerHorizontal="true"
        android:isIndicator="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fi_adresse"
        android:id="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/note" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/adresse"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:textIsSelectable="false"
        android:layout_toEndOf="@id/textView"
        android:layout_below="@+id/note" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fi_telephone"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/telephone"
        android:layout_below="@+id/adresse"
        android:layout_alignParentEnd="false"
        android:autoLink="phone"
        android:layout_toEndOf="@id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fi_site"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/site"
        android:layout_below="@+id/telephone"
        android:layout_alignParentEnd="false"
        android:autoLink="web"
        android:layout_toEndOf="@id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fi_prix"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/prix"
        android:layout_below="@+id/site"
        android:layout_toEndOf="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fi_cuisine"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/cuisine"
        android:layout_below="@+id/prix"
        android:layout_toEndOf="@+id/textView5" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fi_modifier"
        android:id="@+id/modifier"
        android:onClick="modifier"
        android:layout_above="@+id/partager"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fi_partager"
        android:id="@+id/partager"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/supprimer"
        android:onClick="partager" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fi_supprimer"
        android:id="@+id/supprimer"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="supprimer" />

</RelativeLayout>
